adding picture to project

--- a/styles.css
+++ b/styles.css
@@ -518,7 +518,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://banner2.cleanpng.com/20190621/ruo/kisspng-tic-tac-toe-board-game-zero-kata-tic-tac-toe-tra-wow-connect-3-1-apk-download-for-windows-1-87-5d0cb9b124f437.9471215415611150571514.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
