--- a/styles.css
+++ b/styles.css
@@ -497,7 +497,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://upload.wikimedia.org/wikipedia/en/8/80/Camera-photo.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
