--- a/styles.css
+++ b/styles.css
@@ -539,7 +539,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/e/e9/Check_mark.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
