--- a/styles.css
+++ b/styles.css
@@ -455,7 +455,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://upload.wikimedia.org/wikipedia/en/6/6b/Terrestrial_globe.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
