--- a/styles.css
+++ b/styles.css
@@ -685,7 +685,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://en.wikipedia.org/wiki/Alpine_skiing_at_the_Winter_Olympics#/media/File:Alpine_skiing_pictogram.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
