--- a/styles.css
+++ b/styles.css
@@ -696,7 +696,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://en.wikipedia.org/wiki/Apollo_11#/media/File:Apollo_11_insignia.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
