--- a/styles.css
+++ b/styles.css
@@ -716,7 +716,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://upload.wikimedia.org/wikipedia/en/a/a4/Flag_of_the_United_States.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
