--- a/styles.css
+++ b/styles.css
@@ -476,7 +476,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/b7/Athletics_%28steeplechase_running%29_pictogram.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
