--- a/styles.css
+++ b/styles.css
@@ -602,7 +602,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/9/91/Cupcake.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -623,7 +623,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/4/46/Cot_%28PSF%29.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -644,7 +644,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/e/e6/Ledger.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
