--- a/styles.css
+++ b/styles.css
@@ -560,7 +560,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://media.tenor.com/LAqjYkOsZREAAAAe/wikipedia-brain.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -581,7 +581,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/GNOME_Calculator_icon_2021.svg/1920px-GNOME_Calculator_icon_2021.svg.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -685,7 +685,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: url(https://en.wikipedia.org/wiki/Alpine_skiing_at_the_Winter_Olympics#/media/File:Alpine_skiing_pictogram.svg);
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Alpine_skiing_pictogram.svg/1920px-Alpine_skiing_pictogram.svg.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -696,7 +696,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: url(https://en.wikipedia.org/wiki/Apollo_11#/media/File:Apollo_11_insignia.png);
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Apollo_11_insignia.png/1920px-Apollo_11_insignia.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
