--- a/styles.css
+++ b/styles.css
@@ -434,7 +434,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: na;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Venn_diagram_showing_Greek%2C_Latin_and_Cyrillic_letters.svg/1920px-Venn_diagram_showing_Greek%2C_Latin_and_Cyrillic_letters.svg.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
