--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,214 @@
     }
   }
 
+  /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
+.about3 {
+  font-size: 1.25rem;
+  font-weight: strong;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  line-height: 1.5;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.skills_skill {
+  font-size: 0.95rem;
+  font-weight: 600;
+  color: black;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin: 10px;
+  padding: 5px;
+  min-height: 35px;
+  min-width: 50px;
+  justify-content: start;
+  align-items: center;
+  border: 2px solid black;
+  background-color: lightgray;
+}
+
+.about-button {
+  display: flex;
+  min-height: 70px;
+  max-height: 75px;
+  min-width: 30%;
+  max-width: 50%;
+  padding: .25rem auto;
+  margin-left: 1.5rem;
+  margin-right: auto;
+  vertical-align: middle;
+  align-items: center;
+  justify-content: center;
+  transition-duration: 0.3s;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  font-weight: 700;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  white-space: nowrap;
+  border: 2px solid black;
+  color: white;
+  background-color: blue;
+  text-align: center;
+  border-radius: 7.5px;
+  font-size: 0.95rem;
+}
+
+section {
+  display: block;
+  padding: 4rem 2rem;
+}
+
+.welc-about {
+  font-size: 1.05rem;
+}
+
+.footer-description {
+  font-size: 0.95;
+}
+
+@media (min-width:481px) {
+   /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
+    .about3 {
+      font-size: 1.25rem;
+    }
+
+    .skills_skill {
+      font-size: 0.95rem;
+    }
+
+    .about-button {
+      font-size: 0.95rem;
+      min-width: 30%;
+    }
+
+    section {
+      padding: 4rem 2rem;
+    }
+
+    .welc-about {
+      font-size: 1.05rem;
+    }
+
+    .footer-description {
+      font-size: 0.95;
+    }
+}
+
+@media (min-width:641px) {
+    /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 
+    .about3 {
+      font-size: 1.25rem;
+    }
+
+    .skills_skill {
+      font-size: 0.95rem;
+    }
+
+    .about-button {
+      font-size: 0.95rem;
+      min-width: 35%;
+    }
+
+    section {
+      padding: 4rem 2rem;
+    }
+
+    .welc-about {
+      font-size: 1.05rem;
+    }
+
+    .footer-description {
+      font-size: 0.95;
+    }
+}
+
+@media (min-width:961px) { 
+    /* tablet, landscape iPad, lo-res laptops and desktops */ 
+    .about3 {
+      font-size: 1.5rem;
+    }
+
+    .skills_skill {
+      font-size: 0.95rem;
+    }
+
+    .about-button {
+      font-size: 0.95rem;
+      min-width: 35%;
+    }
+
+    section {
+      padding: 6rem 3rem;
+    }
+
+    .welc-about {
+      font-size: 1.05rem;
+    }
+
+    .footer-description {
+      font-size: 0.95;
+    }
+}
+
+@media (min-width:1025px) {
+    /* big landscape tablets, laptops, and desktops */ 
+    .about3 {
+      font-size: 1.75rem;
+    }
+
+    .skills_skill {
+      font-size: 1rem;
+    }
+
+    .about-button {
+      font-size: 1.2rem;
+      min-width: 45%;
+    }
+
+    section {
+      padding: 8rem 5rem;
+    }
+
+    .welc-about {
+      font-size: 1.3rem;
+    }
+
+    .footer-description {
+      font-size: 1.2rem;
+    }
+}
+
+@media (min-width:1281px) { 
+    /* hi-res laptops and desktops */ 
+    .about3 {
+      font-size: 1.75rem;
+    }
+
+    .skills_skill {
+      font-size: 1rem;
+    }
+
+    .about-button {
+      font-size: 1.2rem;
+      min-width: 45%;
+    }
+
+    section {
+      padding: 8rem 5rem;
+    }
+
+    .welc-about {
+      font-size: 1.3rem;
+    }
+
+    .footer-description {
+      font-size: 1.2rem;
+    }
+}
+
   .ss {
     min-width: 10px;
     min-height: 10px;
@@ -118,15 +326,6 @@
     background: rgba(65, 109, 243, 0.305);
   }
 
-  /*#nav {
-    position: fixed
-  }*/
-
-  section {
-    display: block;
-    padding: 8rem 5rem;
-  }
-
   #about {
     padding: 8rem 0;
   }
@@ -205,7 +404,6 @@
 
   #welc-about {
     font-weight: 500;
-    font-size: 1.3rem;
     justify-content: center;
     text-align: center;
     padding-bottom: 2rem;
@@ -235,7 +433,6 @@
   }
 
   #about3 {
-    font-size: 1.75rem;
     font-weight: strong;
     text-align: center;
     justify-content: center;
@@ -291,7 +488,6 @@
 
   #about11 {
     font-weight: normal;
-    font-size: 1.2rem;
     text-align: left;
     line-height: 1.5;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -307,18 +503,6 @@
     max-height: 2000px;
     padding: 8rem 5rem;
   }
-
-  /*header {
-    width: 100%;
-    height: 75px;
-    background-color: #1b1b44;
-    display: inline-block;
-    justify-content: center;
-    align-items: end;
-    top: 0;
-    margin: 0 auto;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }*/
 
   .About-mee {
     max-height: 2000px;
@@ -730,22 +914,6 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
-  .skills_skill {
-    font-size: 1rem;
-    font-weight: 600;
-    color: black;
-    border-radius: 5px;
-    box-sizing: border-box;
-    margin: 10px;
-    padding: 5px;
-    min-height: 35px;
-    min-width: 50px;
-    justify-content: start;
-    align-items: center;
-    border: 2px solid black;
-    background-color: lightgray;
-  }
-
   .skills_skill:hover {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
@@ -796,34 +964,6 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     cursor: pointer;
     transform: translateY(-5px);
-  }
-
-  .about-button {
-    display: flex;
-    min-height: 70px;
-    max-height: 75px;
-    min-width: 45%;
-    max-width: 50%;
-    padding: .25rem auto;
-    margin-left: 1.5rem;
-    margin-right: auto;
-    vertical-align: middle;
-    align-items: center;
-    justify-content: center;
-    transition-duration: 0.3s;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-decoration: none;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    font-weight: 700;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    white-space: nowrap;
-    border: 2px solid black;
-    color: white;
-    background-color: blue;
-    text-align: center;
-    border-radius: 7.5px;
-    font-size: 1.2rem;
   }
 
   .about-button:hover {
