--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,10 @@ section {
   font-size: 0.95;
 }
 
+.about1 {
+  font-size: 2.25rem;
+}
+
 @media (min-width:481px) {
    /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
     .about3 {
@@ -130,6 +134,10 @@ section {
     .contact-button {
       font-size: 0.95rem;
       min-width: 30%;
+    }
+
+    .about1 {
+      font-size: 2.5rem;
     }
 }
 
@@ -164,6 +172,10 @@ section {
       font-size: 0.95rem;
       min-width: 35%;
     }
+
+    .about1 {
+      font-size: 2.5rem;
+    }
 }
 
 @media (min-width:961px) { 
@@ -196,6 +208,10 @@ section {
     .contact-button {
       font-size: 0.95rem;
       min-width: 35%;
+    }
+
+    .about1 {
+      font-size: 2.5rem;
     }
 }
 
@@ -230,6 +246,10 @@ section {
       font-size: 1.2rem;
       min-width: 45%;
     }
+
+    .about1 {
+      font-size: 2.75rem;
+    }
 }
 
 @media (min-width:1281px) { 
@@ -262,6 +282,10 @@ section {
     .contact-button {
       font-size: 1.2rem;
       min-width: 45%;
+    }
+
+    .about1 {
+      font-size: 3rem;
     }
 }
 
@@ -465,7 +489,6 @@ section {
   }
 
   #about1 {
-    font-size: 3rem;
     letter-spacing: 3px;
     font-weight: strong;
     text-align: center;
