--- a/styles.css
+++ b/styles.css
@@ -711,7 +711,7 @@ section {
   }
 
   .p6p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Venn_diagram_showing_Greek%2C_Latin_and_Cyrillic_letters.svg/1920px-Venn_diagram_showing_Greek%2C_Latin_and_Cyrillic_letters.svg.png);
@@ -732,7 +732,7 @@ section {
   }
 
   .p7p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/en/6/6b/Terrestrial_globe.svg);
@@ -753,7 +753,7 @@ section {
   }
 
   .p8p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/b7/Athletics_%28steeplechase_running%29_pictogram.svg);
@@ -774,7 +774,7 @@ section {
   }
 
   .p9p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/en/8/80/Camera-photo.svg);
@@ -795,7 +795,7 @@ section {
   }
 
   .p10p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/3/32/Tic_tac_toe.svg);
@@ -816,7 +816,7 @@ section {
   }
 
   .p11p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/e/e9/Check_mark.svg);
@@ -837,7 +837,7 @@ section {
   }
 
   .p12p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://media.tenor.com/LAqjYkOsZREAAAAe/wikipedia-brain.png);
@@ -858,7 +858,7 @@ section {
   }
 
   .p13p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/GNOME_Calculator_icon_2021.svg/1920px-GNOME_Calculator_icon_2021.svg.png);
@@ -879,7 +879,7 @@ section {
   }
 
   .p14p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/9/91/Cupcake.svg);
@@ -900,7 +900,7 @@ section {
   }
 
   .p15p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/4/46/Cot_%28PSF%29.png);
@@ -921,7 +921,7 @@ section {
   }
 
   .p16p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/e/e6/Ledger.png);
@@ -942,7 +942,7 @@ section {
   }
 
   .p17p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: na;
@@ -952,7 +952,7 @@ section {
   }
 
   .p1p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: na;
@@ -962,7 +962,7 @@ section {
   }
 
   .p2p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Alpine_skiing_pictogram.svg/1920px-Alpine_skiing_pictogram.svg.png);
@@ -973,7 +973,7 @@ section {
   }
 
   .p3p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Apollo_11_insignia.png/1920px-Apollo_11_insignia.png);
@@ -983,7 +983,7 @@ section {
   }
 
   .p4p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url('https://illustoon.com/photo/dl/11331.png');
@@ -993,7 +993,7 @@ section {
   }
 
   .p5p {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 150px;
     width: 100%;
     background-image: url(https://upload.wikimedia.org/wikipedia/en/a/a4/Flag_of_the_United_States.svg);
