--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,9 @@ section {
 }
 
 .about-section {
-  margin: 0 1rem;
+  margin: 0;
+  padding-left: 0;
+  padding-right: 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: .5rem;
