--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,10 @@ section {
   grid-gap: .5rem;
 }
 
+.welcome {
+  padding: 4rem 2rem;
+}
+
 @media (min-width:481px) {
    /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
     .about3 {
@@ -167,6 +171,10 @@ section {
 
     .about-section {
       margin: 0 2rem;
+    }
+
+    .welcome {
+      padding: 4rem 2rem;
     }
 }
 
@@ -217,6 +225,10 @@ section {
     .about-section {
       margin: 0 2rem;
     }
+
+    .welcome {
+      padding: 4rem 2rem;
+    }
 }
 
 @media (min-width:961px) { 
@@ -265,6 +277,10 @@ section {
 
     .about-section {
       margin: 0 2.5rem;
+    }
+
+    .welcome {
+      padding: 6rem 3rem;
     }
 }
 
@@ -315,6 +331,10 @@ section {
     .about-section {
       margin: 0 3rem;
     }
+
+    .welcome {
+      padding: 8rem 5rem;
+    }
 }
 
 @media (min-width:1281px) { 
@@ -363,6 +383,10 @@ section {
 
     .about-section {
       margin: 0 3rem;
+    }
+
+    .welcome {
+      padding: 8rem 5rem;
     }
 }
 
@@ -649,7 +673,6 @@ section {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     min-height: 300px;
     max-height: 2000px;
-    padding: 8rem 5rem;
   }
 
   .About-mee {
