--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ section {
 
 .welc-about {
   font-size: 1.05rem;
+  vertical-align: middle;
 }
 
 .footer-description {
@@ -110,6 +111,7 @@ section {
 
 .welc-about1 {
   font-size: 3.35rem;
+  vertical-align: middle;
 }
 
 .about-section {
