--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ section {
 .welc-about {
   font-size: 1.05rem;
   vertical-align: middle;
+  padding-top: 5rem;
 }
 
 .footer-description {
@@ -112,6 +113,7 @@ section {
 .welc-about1 {
   font-size: 3.35rem;
   vertical-align: middle;
+  padding-top: 5rem;
 }
 
 .about-section {
