--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ section {
 .welc-about {
   font-size: 1.05rem;
   vertical-align: middle;
-  padding-top: 5rem;
+  padding-top: 3rem;
 }
 
 .footer-description {
@@ -113,7 +113,7 @@ section {
 .welc-about1 {
   font-size: 3.35rem;
   vertical-align: middle;
-  padding-top: 5rem;
+  padding-top: 3rem;
 }
 
 .about-section {
@@ -519,7 +519,7 @@ section {
     max-height: 300px;
     min-width: 58%;
     max-width: 60%;
-    padding: .25rem auto;
+    padding: (3rem, auto, .25rem, auto);
     margin-left: auto;
     margin-right: auto;
     vertical-align: middle;
