--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ section {
 .about-section {
   border-style: dashed;
   margin: 0;
-  padding-left: -2rem;
+  padding-left: 0;
   padding-right: 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
