--- a/styles.css
+++ b/styles.css
@@ -1104,7 +1104,7 @@ section {
 
   .p4p {
     /* border: 2px solid black; */
-    height: 100%;
+    height: 150px;
     width: 100%;
     background-image: url('https://illustoon.com/photo/dl/11331.png');
     background-size: contain;
