--- a/styles.css
+++ b/styles.css
@@ -1237,3 +1237,123 @@ section {
   .project4-right {
     width: 100%;
   }
+
+  .project5-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project5-right {
+    width: 100%;
+  }
+
+  .project6-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project6-right {
+    width: 100%;
+  }
+
+  .project7-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project7-right {
+    width: 100%;
+  }
+
+  .project8-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project8-right {
+    width: 100%;
+  }
+
+  .project9-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project9-right {
+    width: 100%;
+  }
+
+  .project10-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project10-right {
+    width: 100%;
+  }
+
+  .project11-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project11-right {
+    width: 100%;
+  }
+
+  .project12-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project12-right {
+    width: 100%;
+  }
+
+  .project13-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project13-right {
+    width: 100%;
+  }
+
+  .project14-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project14-right {
+    width: 100%;
+  }
+
+  .project15-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project15-right {
+    width: 100%;
+  }
+
+  .project16-left {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project16-right {
+    width: 100%;
+  }
