--- a/styles.css
+++ b/styles.css
@@ -256,6 +256,102 @@ section {
     .aboutSizer2 {
       font-size: 0.95rem;
     }
+
+    .project1-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project2-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project3-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project4-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project5-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project6-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project7-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project8-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project9-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project10-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project11-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project12-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project13-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project14-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project15-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project16-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
 }
 
 @media (min-width:961px) { 
@@ -314,6 +410,102 @@ section {
 
     .aboutSizer2 {
       font-size: 0.95rem;
+    }
+
+    .project1-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project2-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project3-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project4-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project5-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project6-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project7-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project8-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project9-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project10-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project11-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project12-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project13-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project14-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project15-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project16-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
     }
 }
 
@@ -432,6 +624,102 @@ section {
 
     .aboutSizer2 {
       font-size: 1.2rem;
+    }
+
+    .project1-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project2-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project3-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project4-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project5-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project6-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project7-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project8-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project9-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project10-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project11-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project12-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project13-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project14-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project15-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project16-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
     }
 }
 
@@ -1228,8 +1516,38 @@ section {
     padding-top: 4.5rem;
   }
 
-  .project4-left {
+  .project1-left {
+    width: 30%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project1-right {
     width: 100%;
+  }
+
+  .project2-left {
+    width: 30%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project2-right {
+    width: 100%;
+  }
+
+  .project3-left {
+    width: 30%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project3-right {
+    width: 100%;
+  }
+
+  .project4-left {
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1239,7 +1557,7 @@ section {
   }
 
   .project5-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1249,7 +1567,7 @@ section {
   }
 
   .project6-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1259,7 +1577,7 @@ section {
   }
 
   .project7-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1269,7 +1587,7 @@ section {
   }
 
   .project8-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1279,7 +1597,7 @@ section {
   }
 
   .project9-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1289,7 +1607,7 @@ section {
   }
 
   .project10-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1299,7 +1617,7 @@ section {
   }
 
   .project11-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1309,7 +1627,7 @@ section {
   }
 
   .project12-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1319,7 +1637,7 @@ section {
   }
 
   .project13-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1329,7 +1647,7 @@ section {
   }
 
   .project14-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1339,7 +1657,7 @@ section {
   }
 
   .project15-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
@@ -1349,7 +1667,7 @@ section {
   }
 
   .project16-left {
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
   }
