--- a/styles.css
+++ b/styles.css
@@ -197,6 +197,102 @@ section {
     .aboutSizer2 {
       font-size: 0.95rem;
     }
+
+    .project1-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project2-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project3-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project4-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project5-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project6-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project7-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project8-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project9-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project10-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project11-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project12-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project13-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project14-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project15-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .project16-left {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
 }
 
 @media (min-width:641px) {
