--- a/styles.css
+++ b/styles.css
@@ -512,6 +512,7 @@ section {
       width: 100%;
       justify-content: center;
       align-items: center;
+      flex-direction: space-around;
     }
   
     .project2-left {
