--- a/styles.css
+++ b/styles.css
@@ -1161,6 +1161,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .project-2-container {
@@ -1192,6 +1193,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .project-4-container {
@@ -1205,6 +1207,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .project-5-container {
@@ -1218,6 +1221,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .project-6-container {
@@ -1231,6 +1235,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p6p {
@@ -1254,6 +1259,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p7p {
@@ -1277,6 +1283,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p8p {
@@ -1300,6 +1307,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p9p {
@@ -1323,6 +1331,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p10p {
@@ -1346,6 +1355,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p11p {
@@ -1369,6 +1379,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p12p {
@@ -1392,6 +1403,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p13p {
@@ -1415,6 +1427,7 @@ section {
     display: flex;
     float:left;
     flex-wrap: nowrap;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p14p {
@@ -1438,6 +1451,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p15p {
@@ -1461,6 +1475,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p16p {
@@ -1484,6 +1499,7 @@ section {
     flex-wrap: nowrap;
     padding-top: 5rem;
     padding-bottom: 25rem;
+    border: 2px solid rgba(65, 109, 243, 0.305);
   }
 
   .p17p {
