--- a/styles.css
+++ b/styles.css
@@ -1593,6 +1593,7 @@ section {
 
   .contact {
     background-image: linear-gradient(to top, blue, white);
+    padding-top: 15rem;
   }
 
   .contact-button:hover {
