--- a/styles.css
+++ b/styles.css
@@ -1595,6 +1595,8 @@ section {
   .contact {
     background-image: linear-gradient(to top, blue, white);
     padding-top: 15rem;
+    justify-content: center;
+    align-items: center;
   }
 
   .contact-button:hover {
@@ -1842,4 +1844,5 @@ section {
     color:#000000;
     text-decoration:none;
     justify-content: center;
+    align-items: center;
   }
